// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`textInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
      >
        <label
          class="uv_l58dz72 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
          for="_r_0_"
        >
          Test
        </label>
        <div
          class="uv_yl1780 uv_yl1781 uv_yl1785 uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n477"
        >
          <div
            class="uv_xf61n40 uv_xf61n42j"
          >
            <div
              class="uv_xf61n40 uv_xf61n42j"
            >
              <input
                aria-valuemax="23"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_yl1788"
                data-size="large"
                data-testid="hours-input"
                id="_r_0_"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="uv_yl178a uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
              >
                :
              </span>
            </div>
            <div
              class="uv_xf61n40 uv_xf61n42j"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_yl1788"
                data-size="large"
                data-testid="minutes-input"
                id="_r_0_"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="uv_yl178a uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
              >
                :
              </span>
            </div>
            <div
              class="uv_xf61n40 uv_xf61n42j"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_yl1788"
                data-size="large"
                data-testid="seconds-input"
                id="_r_0_"
                placeholder="00"
                role="spinbutton"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`textInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
      >
        <label
          class="uv_l58dz72 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
          for="_r_8_"
        >
          Test
        </label>
        <div
          class="uv_yl1780 uv_yl1781 uv_yl1785 uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n477"
        >
          <div
            class="uv_xf61n40 uv_xf61n42j"
          >
            <div
              class="uv_xf61n40 uv_xf61n42j"
            >
              <input
                aria-valuemax="23"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_yl1788"
                data-size="large"
                data-testid="hours-input"
                id="_r_8_"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="uv_yl178a uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
              >
                :
              </span>
            </div>
            <div
              class="uv_xf61n40 uv_xf61n42j"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_yl1788"
                data-size="large"
                data-testid="minutes-input"
                id="_r_8_"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="uv_yl178a uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
              >
                :
              </span>
            </div>
            <div
              class="uv_xf61n40 uv_xf61n42j"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_yl1788"
                data-size="large"
                data-testid="seconds-input"
                id="_r_8_"
                placeholder="00"
                role="spinbutton"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
